--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,8 +5,7 @@
 	},
 	"extends": [
 		"eslint:recommended",
-		"plugin:@typescript-eslint/recommended",
-		"plugin:react/recommended"
+		"plugin:@typescript-eslint/recommended"
 	],
 	"parser": "@typescript-eslint/parser",
 	"parserOptions": {
@@ -14,20 +13,11 @@
 		"sourceType": "module"
 	},
 	"plugins": [
-		"@typescript-eslint",
-		"react"
+		"@typescript-eslint"
 	],
 	"rules": {
 		"@typescript-eslint/ban-ts-comment": "off",
 		"@typescript-eslint/no-explicit-any": "off",
-		"no-unsafe-optional-chaining": "off",
-		"react/display-name": "off",
-		"react/react-in-jsx-scope": "off",
-		"react/no-unescaped-entities": "off"
-	},
-	"settings": {
-		"react": {
-			"version": "detect"
-		}
+		"no-unsafe-optional-chaining": "off"
 	}
 }
