--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "sdk-bico",
   "version": "1.0.0",
+  "license": "MIT",
   "scripts": {
     "test": "yarn jest:clear:cache && jest --watch",
     "test:ci": "yarn jest:clear:cache && jest",
     "jest:clear:cache": "jest --clearCache",
-    "lint": "eslint './src/**/*.{ts,tsx}*' --fix",
-    "format": "prettier --write \"**/*.{js,ts,tsx,md}\"",
+    "lint": "eslint './src/**/*.ts' --fix",
+    "format": "prettier --write \"**/*.{js,ts,md}\"",
     "ncu": "ncu --color",
     "ncu:doctor": "ncu --doctor --color",
     "ncu:u": "ncu --upgrade --color",
@@ -19,11 +20,16 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
-    "eslint": "^9.0.0",
+    "@typescript-eslint/eslint-plugin": "^7.6.0",
+    "@typescript-eslint/parser": "^7.6.0",
+    "eslint": "^8.57.0",
     "jest": "^29.7.0",
+    "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
     "ts-jest": "^29.1.2",
-    "typescript": "^5.4.4",
-    "lint-staged": "^15.2.2"
+    "typescript": "^5.4.4"
+  },
+  "dependencies": {
+    "ncu": "^0.2.1"
   }
 }
