--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sdk-bico",
   "version": "1.0.0",
   "license": "MIT",
+  "main": "src/index.ts",
   "scripts": {
     "test": "yarn jest:clear:cache && jest --watch",
     "test:ci": "yarn jest:clear:cache && jest",
@@ -30,6 +31,7 @@
     "typescript": "^5.4.4"
   },
   "dependencies": {
+    "joi": "^17.12.3",
     "ncu": "^0.2.1"
   }
 }
