--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,10 +7,13 @@
     "baseUrl": "./",
     "paths": {
       "@models": [
-        "src/model"
+        "src/models"
       ],
       "@validations": [
         "src/validations"
+      ],
+      "@helpers": [
+        "src/helpers"
       ],
     }
   },
