[main] - Feat: Work in progress

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,17 @@
 {
   "compilerOptions": {
     "strict": true,
+    "lib": [
+      "es2022"
+    ],
+    "module": "ES2022",
     "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "target": "es5",
+    "target": "ES2015",
     "baseUrl": "./",
+    "esModuleInterop": true,
+    "outFile": "dist/index.d.ts",
+    "declaration": true,
+    "emitDeclarationOnly": true,
     "paths": {
       "@models": [
         "src/models"
@@ -18,7 +25,7 @@
     }
   },
   "include": [
-    "**/*.ts",
+    "src/index.ts",
   ],
   "exclude": [
     "node_modules"
