--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "sdk-bico",
   "version": "1.0.0",
   "license": "MIT",
-  "main": "index.ts",
+  "main": "dist/index.js",
+  "types": "src/index.d.ts",
   "scripts": {
     "test": "yarn jest:clear:cache && jest --watch",
     "test:ci": "yarn jest:clear:cache && jest",
@@ -12,7 +13,8 @@
     "ncu": "ncu --color",
     "ncu:doctor": "ncu --doctor --color",
     "ncu:u": "ncu --upgrade --color",
-    "lint-staged": "lint-staged"
+    "lint-staged": "lint-staged",
+    "build": "esbuild src/index.ts --bundle --platform=node --outfile=dist/index.js"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx,html,css,json}": [
@@ -23,6 +25,7 @@
     "@types/jest": "^29.5.12",
     "@typescript-eslint/eslint-plugin": "^7.6.0",
     "@typescript-eslint/parser": "^7.6.0",
+    "esbuild": "^0.20.2",
     "eslint": "^8.57.0",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.2",
