--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,12 @@
 {
   "compilerOptions": {
     "strict": true,
-    "lib": [
-      "es2022"
-    ],
-    "module": "ES2022",
     "moduleResolution": "node",
-    "target": "ES2015",
-    "baseUrl": "./",
-    "composite": true,
-    "esModuleInterop": true,
-    "outFile": "dist/index.d.ts",
+    "resolveJsonModule": true,
+    "target": "es5",
     "declaration": true,
-    "emitDeclarationOnly": true,
+    "baseUrl": ".",
+    "outDir": "dist",
     "paths": {
       "@models": [
         "src/models"
