--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "sdk-bico",
-  "version": "1.0.1",
+  "version": "1.0.5",
   "license": "MIT",
   "main": "src/index.ts",
-  "types": "dist/index.d.ts",
+  "types": "src/index.ts",
+  "description": "Sdk Bico",
   "scripts": {
     "test": "yarn jest:clear:cache && jest --watch",
     "test:ci": "yarn jest:clear:cache && jest",
@@ -13,9 +14,7 @@
     "ncu": "ncu --color",
     "ncu:doctor": "ncu --doctor --color",
     "ncu:u": "ncu --upgrade --color",
-    "lint-staged": "lint-staged",
-    "build": "rm -rf dist && yarn tsc && tsc-alias",
-    "build:watch": "concurrently --kill-others \"tsc -w\" \"tsc-alias -w\""
+    "lint-staged": "lint-staged"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx,html,css,json}": [
@@ -26,18 +25,17 @@
     "@types/jest": "^29.5.12",
     "@typescript-eslint/eslint-plugin": "^7.6.0",
     "@typescript-eslint/parser": "^7.6.0",
-    "concurrently": "^8.2.2",
     "eslint": "^8.57.0",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.2",
     "ncu": "^0.2.1",
     "prettier": "^3.2.5",
     "ts-jest": "^29.1.2",
-    "tslib": "^2.6.2",
     "tsc-alias": "^1.8.8",
+    "tslib": "^2.6.2",
     "typescript": "^5.4.4"
   },
   "dependencies": {
-    "joi": "^17.12.3"
+    "yup": "^1.4.0"
   }
 }
